fix: some cosmetic issues

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -10,6 +10,8 @@ promise-title:
   other: "Content library"
 promise-text:
   other: "Improving teaching and learning outcomes in the Northern region of Ghana"
+home-message:
+  other: Welcome to the internal survey form site. Forms are not accessible from this page.
 title-related-content:
   other: "related content"
 link-access-more:
