--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -74,6 +74,8 @@ form-required:
   other: obligatoire
 form-submit:
   other: Submit
+form-submit-message:
+  other: Vérifiez que vous avez bien répondu à toutes les questions
 form-alert-success:
   other: We receive your message with success
 form-completed:
